2008-03-28  Andres G. Aragoneses  <aaragoneses@novell.com>

	* atk/Object.custom: custom properties for overriding class methods.
	* atk/Makefile.am: include Object.custom.
	* atk/glue/object.c: glue to override class methods.
	* atk/glue/Makefile.am: include object.c.

2008-03-27  Andres G. Aragoneses  <aaragoneses@novell.com>

	* glib/Program.cs: Add new static class for utility property, moving
	the code to call g_set_prgname() from gtk/Application.cs to here,
	and changing return value of g_set_program_name from bool to void.
	* gtk/Application.cs: Use Program.Name as a replacement of 
	calling the native function g_set_prgname().
	* glib/Makefile.am: add Program.cs.

2008-03-21  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: bump svn version
	* generator/CallbackGen.cs: add dnotify support to invoker.
	Store and respond with incoming UserData params. Start using 
	__prefixed private vars to avoid collisions with parameters, 
	like the 'result' params in gio.
	* generator/ManagedCallString.cs: use new data/dnotify invoker
	ctors.
	* generator/MethodBody.cs:
	* generator/Parameters.cs: don't link "out" length params to 
	preceding strings.
	* generator/VMSignature.cs: don't require UserData to be last
	param, since it can have things like error after it.

2008-03-21  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: s/GtkDestroyNotify/GDestroyNotify in vms too.

2008-03-14  Mike Kestner  <mkestner@novell.com>

	* pango/AttrList.custom: pass copies of the attrs to insert*
	since the list assumes ownership.
	* pango/Makefile.am: add new custom file.
	* pango/Pango.metadata: hide AttrList.Insert* for custom impl.

2008-03-12  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: add an Init method for explicit initialization.

2008-03-04  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: update version to 2.12 and tag

2008-02-29  Mike Kestner  <mkestner@novell.com>

	* gdk/Event.cs: add New method for consistency with generated