@@ -1,3 +1,10 @@
+2008-04-01  Mike Kestner  <mkestner@novell.com>
+
+	* generator/InterfaceGen.cs: support "generic" interface
+	implementations like those exposed by gio.  This is specifically for
+	libraries which return GTypes which are not exposed by the library
+	but which implement GInterfaces which are exposed by the library.
+
 2008-03-28  Andres G. Aragoneses  <aaragoneses@novell.com>
 
 	* atk/Object.custom: custom properties for overriding class methods.
